# venvception

./: .envrc  .gitignore  flake.nix  main.py  pyproject.toml
src/venvception/: __init__.py
