[project]
name = "venvception"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click"
]

[project.scripts]
venvception = "venvception:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.basedpyright]
reportAny = false
reportUnusedCallResult = false

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]
